# subtitle_cleaner

./: .env.sample  .gitignore  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_V2.md  CLAUDE.md  Design_specification_layer3_6.md  Dockerfile  PHASE2_DESIGN.md  POSTGRESQL_SETUP.md  README.md  british_sample.srt  cleaned_dynamic.srt  docker-compose.yml  fix_db.py  foden_winner.srt  inspect_db.py  inspect_segment.py  jamaican_sample.srt  knowledge_base.db  pidgin_sample.srt  process_srt.py  pyproject.toml  reproduce_expansion.py  reproduce_overcorrection.py  reproduce_repeated_word.py  reproduce_split_segment.py  requirements.txt  strictness_sample.srt  test_api_foden.py  test_basic_clean.sh  test_srt.srt  test_srt_cleaned.srt  test_srt_cleaned_with_context.json  test_subset.srt  test_url_extraction.py  two_deals.srt  two_deals_api_clean_verify.srt  two_deals_base64.txt  two_deals_clean_transcript.txt  two_deals_cleanup_verify.srt  (+10 more)
.serena/: project.yml
.serena/memories/: api_endpoints.md  code_style_conventions.md  integration_dependencies.md  processing_capabilities.md  project_overview.md  sota_subtitle_correction_research.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
alembic/: env.py
app/: main.py
app/infra/: db.py  (+3 more)
claudedocs/: ENTITY_EXTRACTION_ISSUES_ANALYSIS.md  IMPLEMENTATION_GAP_ANALYSIS.md  cleanup_summary.md  implementation_status.md  tech_debt_analysis.md
frontend/: next.config.mjs  package-lock.json  package.json  typography.ts  wrangler.jsonc
scripts/: learn_corrections.py  run_correction.py
tests/: manual_verify_universal.py
(+167 files in other folders)
