[project]
name = "clean-srt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "cachetools>=6.2.0",
    "deepdiff>=8.6.1",
    "fastapi[standard]>=0.116.2",
    "jellyfish>=1.2.0",
    "language-tool-python>=2.9.4",
    "lingua-language-detector>=2.0.2",
    "numpy>=2.3.3",
    "openai>=1.109.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "phonetics>=1.0.5",
    "prometheus-client>=0.22.1",
    "protobuf>=6.32.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pysubs2>=1.8.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
    "rapidfuzz>=3.14.1",
    "regex>=2025.9.1",
    "scikit-learn>=1.7.2",
    "srt>=3.5.3",
    "symspellpy>=6.7.7",
    "trafilatura>=2.0.0",
    "wordfreq>=3.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "hypothesis>=6.139.1",
    "isort>=6.0.1",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
